# rust-seal

./: .gitignore  Cargo.toml  README.md
dna_gen/: Cargo.toml
dna_gen/src/: lib.rs
examples/: discrete.rs  non_discrete.rs  simple.rs  strings.rs
src/: lib.rs
src/pair/: alignment.rs  alignment_set.rs  alignments.rs  cursor.rs  mod.rs  needleman_wunsch.rs  penalty.rs  run.rs  runs.rs  smith_waterman.rs  step.rs  step_mask.rs  steps.rs  strategy.rs
src/pair/alignment_matrix/: in_memory.rs  memory_mapped.rs  mod.rs
src/pair/alignments/: alignment.rs  iter.rs  mod.rs
src/pair/matrix/: cell.rs  mod.rs
src/pair/strategy/: discrete.rs  mod.rs  non_discrete.rs  non_discrete_.rs
src/pair/strategy/discrete/: global.rs  local.rs
src/pair/strategy/non_discrete/: global.rs  local.rs
