[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["algorithms", "text-processing"]
description = "Implementation of Needleman-Wunsch & Smith-Waterman sequence alignment."
documentation = "https://docs.rs/seal"
homepage = "https://github.com/regexident/rust-seal"
keywords = ["sequence-alignment", "needleman-wunsch", "smith-waterman", "dna", "nlp"]
license = "MPL-2.0"
name = "seal"
readme = "README.md"
repository = "https://github.com/regexident/rust-seal"
version = "0.1.0"

[dependencies]
bitflags = "1.0.4"
memmap = "0.7.0"
tempdir = "0.3.5"

[dependencies.uuid]
version = "0.7.1"
features = [
    "v4",
]