[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["algorithms", "text-processing"]
description = "Implementation of Needleman-Wunsch & Smith-Waterman sequence alignment."
documentation = "https://docs.rs/seal"
homepage = "https://github.com/regexident/rust-seal"
keywords = [
    "sequence-alignment",
    "needleman-wunsch",
    "smith-waterman",
    "dna",
    "nlp",
]
license = "MPL-2.0"
name = "seal"
readme = "README.md"
repository = "https://github.com/regexident/rust-seal"
version = "0.1.6"
edition = "2021"

[dependencies]
bitflags = "1.0.4"
memmap2 = "0.5.0"
tempfile = "3.2.0"
uuid = { version = "1.0.0", features = ["v4"] }
